--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-!**/src/main/resources/jwtKeys/
+/src/main/resources/jwtKeys/
 
 ### STS ###
 .apt_generated
